# trellis

./: .gitignore  .theme_hash  Cargo.toml  LICENSE  README.md  index.html
content/: .gitkeep  hosting.md  index.md  roadmap-and-changelog.md  setup-guide.md
content/advanced/: architecture.md
content/features/: callouts.md  mermaid-diagrams.md  private-pages.md
content/plugins/: frontmatter.md
content/test/: index.md  kitchen-sink.md  protected.md  tango.md
test/: index.html  tango.html
trellis/: Cargo.toml  README.md  config.yml
trellis/src/: handlers.rs  lib.rs  main.rs
trellis/src/trellis/: bundler.rs  cache.rs  config.rs  content_index.rs  layout.rs  mod.rs  renderer.rs  styles.rs  types.rs
trellis/src/trellis/plugins/: callouts.rs  emojicode.rs  encryption.rs  frontmatter.rs  markdown.rs  mermaid.rs  mod.rs  traits.rs
trellis/templates/: error.hbs  feed.hbs  index.hbs  page.hbs
trellis/templates/assets/styles/: base.scss  callouts.scss  custom.scss
trellis/templates/assets/styles/components/: contentMeta.scss  encrypted-note.scss  explorer.scss  graph.scss  overlay-explorer.scss  taglist.scss
trellis/templates/components/: backlinks.hbs  explorer.hbs  graph.hbs  taglist.hbs
trellis/templates/components/scripts/: callouts.inline.ts  encrypted-note.inline.ts  explorer.inline.js  explorer.inline.ts  graph.inline.ts  mermaid.inline.js  mermaid.inline.ts  overlay-explorer.inline.ts  util.ts
trellis/templates/util/: clone.ts  fileTrie.ts  github-slugger.ts  path.js  path.ts
