[workspace]
resolver = "2"
members = [
    "trellis",
]

[workspace.dependencies]
actix-web = "4"
actix-multipart = "0.7.2"
confik = "0.15.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
dotenvy = "0.15.7"
actix-cors = "0.7.1"
serde_json = "1.0.140"
chrono = {version ="0.4.41", features = ["serde"]}
argon2 = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
rand_core = { version = "0.9.3", features = ["std"] }
actix-ws = "0.3.0"
actix-files = "0.6.6"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.25", features = ["json"] }
futures-util = "0.3.31"
tokio = { version = "1.43", features = [
    "net",
    "time",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
    "full"
] }
actix-limitation = "0.5.1"
handlebars = "6.3.2"
markdown = "1.0.0"
walkdir = "2.5.0"
anyhow = "1.0.92"
grass = "0.13"
once_cell = "1.19.0"
aes-gcm = "0.10"
base64 = "0.22.1"
pbkdf2 = "0.12"
sha2 = "0.10"
getrandom = "0.3.4"
