[workspace]
resolver = "2"
members = [
    "trellis",
]

[workspace.dependencies]
actix-web = "4"
actix-multipart = "0.7.2"
confik = "0.15.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
dotenvy = "0.15.7"
actix-cors = "0.7.1"
serde_json = "1.0.140"
chrono = {version ="0.4.41", features = ["serde"]}
argon2 = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
rand_core = { version = "0.9.3", features = ["std"] }
actix-ws = "0.3.0"
actix-files = "0.6.6"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.25", features = ["json"] }
futures-util = "0.3.31"
tokio = { version = "1.43", features = [
    "net",
    "time",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
    "full"
] }
actix-limitation = "0.5.1"
handlebars = "6.3.2"
markdown = "1.0.0"
walkdir = "2.5.0"
anyhow = "1.0.92"
grass = "0.13"
once_cell = "1.19.0"
aes-gcm = "0.10"
base64 = "0.22.1"
pbkdf2 = "0.12"
sha2 = "0.10"
getrandom = "0.3.4"
swc_bundler = "37.0.0"
swc_ecma_ast = "19.0.0"
swc_ecma_visit = "19.0.0"
swc_ecma_parser = "29.0.1"
swc_ecma_codegen = "21.0.0"
swc_ecma_transforms_base = "32.0.0"
swc_ecma_transforms_optimization = "34.0.0"
swc_ecma_minifier = "38.0.1"
swc_atoms = "9.0.0"
swc_common = "18.0.1"
swc_ecma_loader = { version = "18.0.0", features = ["cache"] }
swc_ecma_transforms_typescript = "35.0.0"
notify = "8.2.0"
emojis = "0.8.0"
