[package]
name = "trellis"
version = "0.3.0"
edition = "2024"
description = "Create digital gardens with markdown"
license = "MIT"
repository = "https://github.com/studium-labs/trellis"

[dependencies]
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }
actix-multipart = { workspace = true }
actix-ws = { workspace = true }
actix-limitation = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
confik = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
rand_core = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
handlebars = { workspace = true }
markdown = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
grass = { workspace = true }
once_cell = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
swc_bundler = { workspace = true }
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_codegen = { workspace = true }
swc_ecma_transforms_base = { workspace = true }
swc_ecma_transforms_optimization = { workspace = true }
swc_ecma_loader = { workspace = true }
swc_ecma_minifier = { workspace = true }
notify = { workspace = true }
swc_atoms = { workspace = true }
swc_ecma_visit = { workspace = true }
swc_ecma_transforms_typescript = { workspace = true }
